--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Checkout Pull Request Code
+name: Checkout Pull Request Code and Install npm
 
 on:
   pull_request:
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  checkout_code:
+  checkout_and_install:
     runs-on: ubuntu-latest
 
     steps:
@@ -14,3 +14,17 @@ jobs:
         uses: actions/checkout@v2
         with:
           ref: ${{ github.event.pull_request.head.ref }}
+
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14' # or specify the version you need
+
+      - name: Install npm dependencies
+        run: npm install
+
+      - name: Install SFDX
+        run: npm install @salesforce/cli --global
+
+      - name: SFDX version
+        run: sfdx -v
