--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,9 @@ jobs:
         run: sfdx force:org:list
 
       - name: Authenticated devOrg
-        run: sf org login jwt --client-id ${{ secrets.SALESFORCE_CLIENT_ID }} --jwt-key-file ${{ secrets.SALESFORCE_SERVER_KEY }} --username ${{ secrets.SALESFORCE_USERNAME }} --instance-url https://amolm-dev-ed.my.salesforce.com -a devorg
+        run: |
+            echo ${{ secrets.SALESFORCE_SERVER_KEY }} | base64 -d > server.key      
+            sf org login jwt --client-id ${{ secrets.SALESFORCE_CLIENT_ID }} --jwt-key-file server.key  --username ${{ secrets.SALESFORCE_USERNAME }} --instance-url https://amolm-dev-ed.my.salesforce.com -a devorg
       
       - name: Display Authenticated Org
         run: sfdx force:org:list        
