--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,10 +32,11 @@ jobs:
       - name: Display Authenticated Org
         run: sfdx force:org:list
 
+      - name: Access Repository Secret and create server.key
+        run:  echo "${{ secrets.SALESFORCE_SERVER_KEY }}" | base64 --decode > server.key
+
       - name: Authenticated devOrg
-        run: |
-            echo ${{ secrets.SALESFORCE_SERVER_KEY }} | base64 -d > server.key      
-            sf org login jwt --client-id ${{ secrets.SALESFORCE_CLIENT_ID }} --jwt-key-file server.key  --username ${{ secrets.SALESFORCE_USERNAME }} --instance-url https://amolm-dev-ed.my.salesforce.com -a devorg
+        run: sf org login jwt --client-id ${{ secrets.SALESFORCE_CLIENT_ID }} --jwt-key-file server.key  --username ${{ secrets.SALESFORCE_USERNAME }} --instance-url https://amolm-dev-ed.my.salesforce.com -a devorg
       
       - name: Display Authenticated Org
         run: sfdx force:org:list        
