--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,10 +33,11 @@ jobs:
         run: sfdx force:org:list
 
       - name: Access Repository Secret and create server.key
-        run:  echo "${{ secrets.SALESFORCE_SERVER_KEY }}" | base64 --decode > server.key
+        run:  echo "${{ env.SERVER_KEY }}" | base64 --decode > server.key
+        #run:  echo "${{ secrets.SALESFORCE_SERVER_KEY }}" | base64 --decode > server.key
 
       - name: Authenticated devOrg
         run: sf org login jwt --client-id ${{ secrets.SALESFORCE_CLIENT_ID }} --jwt-key-file server.key  --username ${{ secrets.SALESFORCE_USERNAME }} --instance-url https://amolm-dev-ed.my.salesforce.com -a devorg
       
       - name: Display Authenticated Org
-        run: sfdx force:org:list        
+        run: sfdx force:org:list          
