--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,18 +29,15 @@ jobs:
       - name: SFDX version
         run: sfdx -v
 
-      - name: Display Authenticated Org
-        run: sfdx force:org:list
-
-      - name: Access Repository Secret and create server.key
-        run:  echo $SERVER_KEY | base64 --decode > server.key
+      #- name: Access Repository Secret and create server.key
+        #run:  echo $SERVER_KEY | base64 --decode > server.key
         #run:  echo "${{ secrets.SALESFORCE_SERVER_KEY }}" | base64 --decode > server.key
 
       - name: cat server.key
-        run:  cat server.key
+        run:  cat /home/runner/work/sfdc/sfdc/key/devorg/server.key
 
       - name: Authenticated devOrg
-        run: sf org login jwt --client-id ${{ secrets.SALESFORCE_CLIENT_ID }} --jwt-key-file server.key  --username ${{ secrets.SALESFORCE_USERNAME }} --instance-url https://amolm-dev-ed.my.salesforce.com -a devorg
+        run: sf org login jwt --client-id ${{ secrets.SALESFORCE_CLIENT_ID }} --jwt-key-file /home/runner/work/sfdc/sfdc/key/devorg/server.key  --username ${{ secrets.SALESFORCE_USERNAME }} --instance-url https://amolm-dev-ed.my.salesforce.com -a devorg
       
       - name: Display Authenticated Org
-        run: sfdx force:org:list          
+        run: sfdx force:org:list
