validate command updated

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,4 +45,4 @@ jobs:
       - name: Display Authenticated Org
         run : |
               cd /home/runner/work/sfdc/sfdc/
-              sf project deploy validate --target-org devorg --manifest package.xml
+              sf project deploy validate --target-org devorg --manifest manifest/package.xml
