--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,23 +26,18 @@ jobs:
       - name: Install SFDX
         run: npm install @salesforce/cli --global
 
-      - name: SFDX version
-        run: sfdx -v
-
       #- name: Access Repository Secret and create server.key
         #run:  echo $SERVER_KEY | base64 --decode > server.key
         #run:  echo "${{ secrets.SALESFORCE_SERVER_KEY }}" | base64 --decode > server.key
 
-      - name: cat server.key
-        run:  cat /home/runner/work/sfdc/sfdc/key/devorg/server.key
-
       - name: Authenticated devOrg
         run: sf org login jwt --client-id ${{ secrets.SALESFORCE_CLIENT_ID }} --jwt-key-file /home/runner/work/sfdc/sfdc/key/devorg/server.key  --username ${{ secrets.SALESFORCE_USERNAME }} --instance-url https://amolm-dev-ed.my.salesforce.com -a devorg
-      
-      - name: Display Authenticated Org
-        run: sfdx force:org:list
+
+        env:
+          MY_VARIABLE: "Hello, world!"
 
       - name: Display Authenticated Org
         run : |
               cd /home/runner/work/sfdc/sfdc/
-              sf project deploy validate --target-org devorg --manifest manifest/package.xml
+              Test_classes=$(cat manifest/testRun.txt)
+              sf project deploy validate --target-org devorg --manifest manifest/package.xml --test-level RunSpecifiedTests --t $Test_classes
