--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,23 +20,24 @@ jobs:
         with:
           node-version: '20.12.2' # or specify the version you need
 
-      - name: Install npm dependencies
-        run: npm install
+      - name: Install npm dependencies and SFDX/SF
+        run: |
+            npm install
+            npm install @salesforce/cli --global
 
-      - name: Install SFDX
-        run: npm install @salesforce/cli --global
+      #- name: Install SFD
+      #  run: npm install @salesforce/cli --global
 
-      #- name: Access Repository Secret and create server.key
-        #run:  echo $SERVER_KEY | base64 --decode > server.key
+      - name: Access Repository Secret and create server.key
+        run:  |
+              echo ${{ secrets.SALESFORCE_SERVER_KEY }} | base64 --decode > server.key
+              cat server.key
         #run:  echo "${{ secrets.SALESFORCE_SERVER_KEY }}" | base64 --decode > server.key
 
       - name: Authenticated devOrg
         run: sf org login jwt --client-id ${{ secrets.SALESFORCE_CLIENT_ID }} --jwt-key-file /home/runner/work/sfdc/sfdc/key/devorg/server.key  --username ${{ secrets.SALESFORCE_USERNAME }} --instance-url https://amolm-dev-ed.my.salesforce.com -a devorg
 
-        env:
-          MY_VARIABLE: "Hello, world!"
-
-      - name: Display Authenticated Org
+      - name: Validate package
         run : |
               cd /home/runner/work/sfdc/sfdc/
               Test_classes=$(cat manifest/testRun.txt)
