--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,30 +15,41 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.ref }}
 
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v2
-        with:
-          node-version: '20.12.2' # or specify the version you need
-
-      - name: Install npm dependencies and SFDX/SF
+        - name: Setup Node.js environment
         run: |
-            npm install
-            npm install @salesforce/cli --global
+              # Get the pull request branch name
+              branch_name=$(echo "${{ github.head_ref }}" | tr '[:upper:]' '[:lower:]')
+                        
+              # Extract Jira ticket numbers from the branch name
+              tickets=$(echo "$branch_name" | grep -oE '[A-Z]{2,}-[0-9]+' | tr '\n' ' ')
+
+              # Print the extracted Jira tickets
+              echo "Jira Tickets: $tickets"          
+
+      # - name: Setup Node.js environment
+      #   uses: actions/setup-node@v2
+      #   with:
+      #     node-version: '20.12.2' # or specify the version you need
+
+      # - name: Install npm dependencies and SFDX/SF
+      #   run: |
+      #       npm install
+      #       npm install @salesforce/cli --global
 
       #- name: Install SFD
       #  run: npm install @salesforce/cli --global
 
-      - name: Access Repository Secret and create server.key
-        run:  |
-              echo ${{ secrets.SALESFORCE_SERVER_KEY }} | base64 --decode > server.key
-              cat server.key
-        #run:  echo "${{ secrets.SALESFORCE_SERVER_KEY }}" | base64 --decode > server.key
+      # - name: Access Repository Secret and create server.key
+      #   run:  |
+      #         echo ${{ secrets.SALESFORCE_SERVER_KEY }} | base64 --decode > server.key
+      #         cat server.key
+      #   #run:  echo "${{ secrets.SALESFORCE_SERVER_KEY }}" | base64 --decode > server.key
 
-      - name: Authenticated devOrg
-        run: sf org login jwt --client-id ${{ secrets.SALESFORCE_CLIENT_ID }} --jwt-key-file /home/runner/work/sfdc/sfdc/key/devorg/server.key  --username ${{ secrets.SALESFORCE_USERNAME }} --instance-url https://amolm-dev-ed.my.salesforce.com -a devorg
+      # - name: Authenticated devOrg
+      #   run: sf org login jwt --client-id ${{ secrets.SALESFORCE_CLIENT_ID }} --jwt-key-file /home/runner/work/sfdc/sfdc/key/devorg/server.key  --username ${{ secrets.SALESFORCE_USERNAME }} --instance-url https://amolm-dev-ed.my.salesforce.com -a devorg
 
-      - name: Validate package
-        run : |
-              cd /home/runner/work/sfdc/sfdc/
-              Test_classes=$(cat manifest/testRun.txt)
-              sf project deploy validate --target-org devorg --manifest manifest/package.xml -l RunSpecifiedTests -t $Test_classes
+      # - name: Validate package
+      #   run : |
+      #         cd /home/runner/work/sfdc/sfdc/
+      #         Test_classes=$(cat manifest/testRun.txt)
+      #         sf project deploy validate --target-org devorg --manifest manifest/package.xml -l RunSpecifiedTests -t $Test_classes
