--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,15 @@ jobs:
           ref: ${{ github.event.pull_request.head.ref }}
 
       - name: Setup Node.js environment
+        uses: actions/setup-node@v2
+        with:
+          node-version: '20.12.2' # or specify the version you need
+
+      - name: Install npm dependencies and SFDX/SF
+        run: |
+            npm install
+            
+      - name: get jira ticket name
         run: |
               # Get the pull request branch name
               branch_name=$(echo "${{ github.head_ref }}" | tr '[:upper:]' '[:lower:]')
