--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,14 +23,14 @@ jobs:
       - name: Install npm dependencies and SFDX/SF
         run: |
             npm install
-            
+
       - name: get jira ticket name
         run: |
               # Get the pull request branch name
               branch_name=$(echo "${{ github.head_ref }}" | tr '[:upper:]' '[:lower:]')
                         
               # Extract Jira ticket numbers from the branch name
-              tickets=$(echo "$branch_name" | grep -oE '[A-Z]{2,}-[0-9]+' | tr '\n' ' ')
+              tickets=$(echo "$branch_name" | grep -oE 'SFDX-[0-9]+' | tr '\n' ' ')
 
               # Print the extracted Jira tickets
               echo "Jira Tickets: $tickets"          
