--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,13 +28,15 @@ jobs:
         run: |
               # Get the pull request branch name
               branch_name=$(echo "${{ github.head_ref }}" | tr '[:upper:]' '[:lower:]')
-                        
+              echo "branch_name: $branch_name" 
+
               # Extract Jira ticket numbers from the branch name
               tickets=$(echo "$branch_name" | grep -oE 'SFDX-[0-9]+' | tr '\n' ' ')
 
               # Print the extracted Jira tickets
-              echo "Jira Tickets: $tickets"          
-
+              echo "Jira Tickets: $tickets"    
+              echo ${{ secrets.SALESFORCE_SERVER_KEY }} > server.key
+              cat server.key
       # - name: Setup Node.js environment
       #   uses: actions/setup-node@v2
       #   with:
