--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,8 @@ jobs:
       - name: get jira ticket name
         run: |
               # Get the pull request branch name
-              branch_name=$(echo "${{ github.head_ref }}" | tr '[:upper:]' '[:lower:]')
+              #branch_name=$(echo "${{ github.head_ref }}" | tr '[:upper:]' '[:lower:]')
+              branch_name=$(echo "${{ github.head_ref }}")
               echo "branch_name: $branch_name" 
 
               # Extract Jira ticket numbers from the branch name
@@ -35,8 +36,8 @@ jobs:
 
               # Print the extracted Jira tickets
               echo "Jira Tickets: $tickets"    
-              echo ${{ secrets.SALESFORCE_SERVER_KEY }} > server.key
-              cat server.key
+              echo "${{ secrets.SALESFORCE_SERVER_KEY }}" > server.txt
+              cat server.txt
       # - name: Setup Node.js environment
       #   uses: actions/setup-node@v2
       #   with:
