--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout pull request code
+      - name: Checkout testing branch code 
         uses: actions/checkout@v2
         with:
           ref: ${{ github.event.pull_request.head.ref }}
