--- a/.github/workflows/testing_branch_deploy.yml
+++ b/.github/workflows/testing_branch_deploy.yml
@@ -72,7 +72,7 @@ jobs:
         run : |
                cd /home/runner/work/sfdc/sfdc/
                Test_classes=$(cat manifest/testRun.txt)
-               sf project deploy validate --target-org devorg --manifest package.xml --pre-destructive-changes manifest/predestructiveChanges.xml --post-destructive-changes manifest/postdestructiveChanges.xml -l RunSpecifiedTests -t $Test_classes
+               sf project deploy validate --target-org devorg --manifest manifest/package.xml --pre-destructive-changes manifest/predestructiveChanges.xml --post-destructive-changes manifest/postdestructiveChanges.xml -l RunSpecifiedTests -t $Test_classes
 
       - name: deploy
         run : |
