--- a/.github/workflows/temp.yml
+++ b/.github/workflows/temp.yml
@@ -20,6 +20,6 @@ jobs:
               if [ -d "/home/runner/work/sfdc/" ]; then
                 echo "Folder exists"
               else
-                echo "Folder does not exist $previous"
+                echo "Folder does not exist "
               fi
 
