--- a/.github/workflows/temp.yml
+++ b/.github/workflows/temp.yml
@@ -16,7 +16,7 @@ jobs:
               #next = $( date -d "next Saturday" "+%Y-%m-%d" )
               #previous = $(date -d "last Saturday" "+%Y-%m-%d")
               date -d "next Saturday" "+%Y-%m-%d"
-              previous = date -d "last Saturday" "+%Y-%m-%d"
+              date -d "last Saturday" "+%Y-%m-%d"
               if [ -d "/home/runner/work/sfdc/" ]; then
                 echo "Folder exists"
               else
