--- a/.github/workflows/manual_deploy.yml
+++ b/.github/workflows/manual_deploy.yml
@@ -22,11 +22,11 @@ jobs:
         with:
           ref: ${{ github.event.inputs.branch }}
 
-
-          run: |
-              # Get the pull request branch name
-              branch_name=$(echo ${{ github.event.inputs.branch }}")
-              release_folder=$(echo ${{ github.event.inputs.release_folder }}")
-              
-              echo "branch_name: $branch_name" 
-              echo "branch_name: $release_folder" 
+      - name: Setup Node.js environment
+        run: |
+            # Get the pull request branch name
+            branch_name=$(echo ${{ github.event.inputs.branch }}")
+            release_folder=$(echo ${{ github.event.inputs.release_folder }}")
+            
+            echo "branch_name: $branch_name" 
+            echo "release_folder: $release_folder" 
