--- a/.github/workflows/manual_deploy.yml
+++ b/.github/workflows/manual_deploy.yml
@@ -17,16 +17,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout pull request code
-        uses: actions/checkout@v2
-        with:
-          ref: ${{ github.event.inputs.branch }}
+    #  - name: Checkout pull request code
+    #    uses: actions/checkout@v2
+    #    with:
+    #      ref: ${{ github.event.inputs.branch }}
 
-      - name: Setup Node.js environment
+      - name: output variables
         run: |
             # Get the pull request branch name
             branch_name=$(echo ${{ github.event.inputs.branch }}")
             release_folder=$(echo ${{ github.event.inputs.release_folder }}")
-            
+            echo ${{ github.event.inputs.branch }} 
+            echo ${{ github.event.inputs.release_folder }}
             echo "branch_name: $branch_name" 
             echo "release_folder: $release_folder" 
