--- a/.github/workflows/manual_deploy.yml
+++ b/.github/workflows/manual_deploy.yml
@@ -38,4 +38,14 @@ jobs:
             echo "${{ github.event.inputs.branch }}" 
             echo "${{ github.event.inputs.release_folder }}"
             echo "branch_name: $branch_name" 
-            echo "release_folder: $release_folder" 
+            echo "release_folder: $release_folder"
+
+            next_saturday=$(date -d "next Saturday" "+%Y-%m-%d")
+            previous_saturday=$(date -d "last Saturday" "+%Y-%m-%d")
+            date -d "next Saturday" "+%Y-%m-%d"
+            date -d "last Saturday" "+%Y-%m-%d"
+            if [ -d "/home/runner/work/sdf/" ]; then
+              echo "Folder exists $next_saturday"
+            else
+              echo "Folder does not exist $previous_saturday"
+            fi            
