--- a/.github/workflows/dev_branch_validation.yml
+++ b/.github/workflows/dev_branch_validation.yml
@@ -1,4 +1,4 @@
-name: Validate pull request
+t_name: Validate pull request
 
 on:
   pull_request:
@@ -19,15 +19,15 @@ jobs:
         run: | 
             next_saturday=$(date -d "next Saturday" "+%Y-%m-%d")
             previous_saturday=$(date -d "last Saturday" "+%Y-%m-%d")
-            date -d "next Saturday" "+%Y-%m-%d"
-            date -d "last Saturday" "+%Y-%m-%d"
-            release_name=$(echo "release-$next_saturday")
-            previous_saturday=$(date -d "last Saturday" "+%Y-%m-%d")
-            if [ -d "/home/runner/work/sdf/"$next_saturday ]; then
-              echo "Next Folder : $next_saturday"
+            #date -d "next Saturday" "+%Y-%m-%d"
+            #date -d "last Saturday" "+%Y-%m-%d"
+            next_release_name=$(echo "release-$next_saturday")
+            previous_release_name=$(echo "release-$previous_saturday")
+            if [ -d "/home/runner/work/sdf/$next_release_name" ]; then
+              echo "Next Folder : $next_release_name"
               release_name=$(echo "release-$next_saturday")
-            else if [ -d "/home/runner/work/sdf/"$previous_saturday ]; then
-              echo "Previous Folder : $previous_saturday"
+            else if [ -d "/home/runner/work/sdf/$previous_release_name" ]; then
+              echo "Previous Folder : $previous_release_name"
               release_name=$(echo "release-$previous_saturday")
             else 
               exit;
