--- a/.github/workflows/dev_branch_validation.yml
+++ b/.github/workflows/dev_branch_validation.yml
@@ -26,9 +26,9 @@ jobs:
             if [ -d "/home/runner/work/sdf/$next_release_name" ]; then
               echo "Next Folder : $next_release_name"
               release_name=$(echo "release-$next_saturday")
-            else if [ -d "/home/runner/work/sdf/$previous_release_name" ]; then
-              echo "Previous Folder : $previous_release_name"
-              release_name=$(echo "release-$previous_saturday")
+            #else if [ -d "/home/runner/work/sdf/$previous_release_name" ]; then
+            #  echo "Previous Folder : $previous_release_name"
+            #  release_name=$(echo "release-$previous_saturday")
             else 
               exit;
             fi
