--- a/.github/workflows/dev_branch_validation.yml
+++ b/.github/workflows/dev_branch_validation.yml
@@ -19,10 +19,10 @@ jobs:
         run: | 
             next_saturday=$(date -d "next Saturday" "+%Y-%m-%d")
             previous_saturday=$(date -d "last Saturday" "+%Y-%m-%d")
-            #date -d "next Saturday" "+%Y-%m-%d"
-            #date -d "last Saturday" "+%Y-%m-%d"
-            next_release_name=$(echo "release-$next_saturday")
-            previous_release_name=$(echo "release-$previous_saturday")
+            date -d "next Saturday" "+%Y-%m-%d"
+            date -d "last Saturday" "+%Y-%m-%d"
+            #next_release_name=$(echo "release-$next_saturday")
+            #previous_release_name=$(echo "release-$previous_saturday")
             #if [ -d "/home/runner/work/sdf/$next_release_name" ]; then
             #  echo "Next Folder : $next_release_name"
             #  release_name=$(echo "release-$next_saturday")
