--- a/.github/workflows/dev_branch_validation.yml
+++ b/.github/workflows/dev_branch_validation.yml
@@ -16,18 +16,20 @@ jobs:
           ref: ${{ github.event.pull_request.head.ref }}
 
 
-      - name: Setup Node.js environment
+      - name: Get Release folder
         run : |
             next_saturday=$(date -d "next Saturday" "+%Y-%m-%d")
             previous_saturday=$(date -d "last Saturday" "+%Y-%m-%d")
-            date -d "next Saturday" "+%Y-%m-%d"
-            date -d "last Saturday" "+%Y-%m-%d"
+            #date -d "next Saturday" "+%Y-%m-%d"
+            #date -d "last Saturday" "+%Y-%m-%d"
             release_name=$(echo "release-$next_saturday")
             previous_saturday=$(date -d "last Saturday" "+%Y-%m-%d")
-            if [ -d "/home/runner/work/sdf/" ]; then
-              echo "Folder exists $next_saturday"
+            next_saturday_folder=$(echo "release-$next_saturday")
+            previous_saturday_folder=$(echo "release-$previous_saturday")
+            if [ -d "/home/runner/work/sfdc/sfdc/manifest/$next_saturday_folder" ]; then
+              echo "Folder exists $next_saturday_folder"
             else
-              echo "Folder does not exist $previous_saturday"
+              echo "Folder does not exist $previous_saturday_folder"
             fi
             echo "release name = $release_name"
 
