--- a/.github/workflows/dev_branch_validation.yml
+++ b/.github/workflows/dev_branch_validation.yml
@@ -29,7 +29,7 @@ jobs:
             if [ -d "/home/runner/work/sfdc/sfdc/manifest/$next_saturday_folder" ]; then
               echo "Folder exists $next_saturday_folder"
               release_folder=$(echo $next_saturday_folder)
-            else if [ -d "/home/runner/work/sfdc/sfdc/manifest/$previous_saturday_folder" ]; then
+            elif [ -d "/home/runner/work/sfdc/sfdc/manifest/$previous_saturday_folder" ]; then
               echo "Folder does not exist $previous_saturday_folder"
               release_folder=$(echo $previous_saturday_folder)
             else 
