--- a/.github/workflows/dev_branch_validation.yml
+++ b/.github/workflows/dev_branch_validation.yml
@@ -94,4 +94,4 @@ jobs:
         run : |
                cd /home/runner/work/sfdc/sfdc/
                Test_classes=$(cat manifest/testRun.txt)
-               sf project deploy validate --target-org devorg --manifest manifest/package.xml --pre-destructive-changes manifest/predestructiveChanges.xml --post-destructive-changes manifest/postdestructiveChanges.xml -l RunSpecifiedTests -t $Test_classes
+               sf project deploy validate --target-org devorg --manifest manifest/$release_folder/package.xml --pre-destructive-changes manifest/$release_folder/predestructiveChanges.xml --post-destructive-changes manifest/$release_folder/postdestructiveChanges.xml -l RunSpecifiedTests -t $Test_classes
