--- a/.github/workflows/dev_branch_validation.yml
+++ b/.github/workflows/dev_branch_validation.yml
@@ -49,9 +49,10 @@ jobs:
         run: |
              npm install
              npm install @salesforce/cli --global
+             sf plugins install @salesforce/sfdx-scanner
 
-      - name: Install SFD
-        run: npm install @salesforce/cli --global
+#      - name: Install SFD
+#        run: npm install @salesforce/cli --global
 
       #- name: Access Repository Secret and create server.key
       #  run:  |
